feat(playground-oj): p3 system crud + demo 数据层
