# apps/playground-oj/modules/src/system/api/client.schemas.ts
@@ -6,10 +6,24 @@ import { z } from "@react-antd-module/runtime";
 export const schemas = {
 	fetchAddMenuItem: {
 		body: z.object({
-	parentId: z.number(),
+	parentId: z.string(),
 	id: z.number(),
-	menuType: z.number(),
+	menuType: z.union([z.literal(0), z.literal(1), z.literal(2), z.literal(3)]),
 	name: z.string(),
+	path: z.string(),
+	component: z.string(),
+	order: z.number(),
+	icon: z.string(),
+	currentActiveMenu: z.string(),
+	iframeLink: z.string(),
+	keepAlive: z.number(),
+	externalLink: z.string(),
+	hideInMenu: z.number(),
+	ignoreAccess: z.number(),
+	permission: z.string(),
+	status: z.number(),
+	createTime: z.number(),
+	updateTime: z.number(),
 }),
 		data: z.string(),
 	},
@@ -48,10 +62,24 @@ export const schemas = {
 	fetchMenuList: {
 		data: z.object({
 	list: z.array(z.object({
-		parentId: z.number(),
+		parentId: z.string(),
 		id: z.number(),
-		menuType: z.number(),
+		menuType: z.union([z.literal(0), z.literal(1), z.literal(2), z.literal(3)]),
 		name: z.string(),
+		path: z.string(),
+		component: z.string(),
+		order: z.number(),
+		icon: z.string(),
+		currentActiveMenu: z.string(),
+		iframeLink: z.string(),
+		keepAlive: z.number(),
+		externalLink: z.string(),
+		hideInMenu: z.number(),
+		ignoreAccess: z.number(),
+		permission: z.string(),
+		status: z.number(),
+		createTime: z.number(),
+		updateTime: z.number(),
 	})),
 	total: z.number(),
 	current: z.number().optional(),
@@ -82,18 +110,46 @@ export const schemas = {
 	},
 	fetchRoleMenu: {
 		data: z.array(z.object({
-	parentId: z.number(),
+	parentId: z.string(),
 	id: z.number(),
-	menuType: z.number(),
+	menuType: z.union([z.literal(0), z.literal(1), z.literal(2), z.literal(3)]),
 	name: z.string(),
+	path: z.string(),
+	component: z.string(),
+	order: z.number(),
+	icon: z.string(),
+	currentActiveMenu: z.string(),
+	iframeLink: z.string(),
+	keepAlive: z.number(),
+	externalLink: z.string(),
+	hideInMenu: z.number(),
+	ignoreAccess: z.number(),
+	permission: z.string(),
+	status: z.number(),
+	createTime: z.number(),
+	updateTime: z.number(),
 })),
 	},
 	fetchUpdateMenuItem: {
 		body: z.object({
-	parentId: z.number(),
+	parentId: z.string(),
 	id: z.number(),
-	menuType: z.number(),
+	menuType: z.union([z.literal(0), z.literal(1), z.literal(2), z.literal(3)]),
 	name: z.string(),
+	path: z.string(),
+	component: z.string(),
+	order: z.number(),
+	icon: z.string(),
+	currentActiveMenu: z.string(),
+	iframeLink: z.string(),
+	keepAlive: z.number(),
+	externalLink: z.string(),
+	hideInMenu: z.number(),
+	ignoreAccess: z.number(),
+	permission: z.string(),
+	status: z.number(),
+	createTime: z.number(),
+	updateTime: z.number(),
 }),
 		data: z.string(),
 	},
